--- a/timing_script.ipynb
+++ b/timing_script.ipynb
@@ -2837,10 +2837,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 124,
    "id": "ddcbd1af-b275-479d-85b9-950ac7486467",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "CPU times: total: 28min 3s\n",
+      "Wall time: 28min 5s\n"
+     ]
+    }
+   ],
    "source": [
     "%%time\n",
     "for name, gdf in layer_gdfs.items():\n",
@@ -2862,10 +2871,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 125,
    "id": "d7861437-ac77-4fbf-acba-8c90e0aab741",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "CPU times: total: 4min 35s\n",
+      "Wall time: 4min 36s\n"
+     ]
+    }
+   ],
    "source": [
     "%%time\n",
     "base_layer.to_file('h'+hexLevel+'_allAtOnce.gdb',driver='OpenFileGDB')"
@@ -2873,7 +2891,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 126,
    "id": "234c1d06-a9d1-4370-a37b-fecfbc310d2f",
    "metadata": {},
    "outputs": [],
