--- a/Multi_merge.ipynb
+++ b/Multi_merge.ipynb
@@ -13,7 +13,7 @@
    "id": "706491e6-ab7c-415e-985f-6763c1e1c4d0",
    "metadata": {},
    "source": [
-    "This script runs a single layer join on hex grid. Uses Kate's generated hexes and Inputs.<br>\n",
+    "This script runs a multiple layers to join on hex grid. Uses Kate's generated hexes and Inputs.<br>\n",
     "There is no cleaning and type controll. No optimization/vectorization/parallelization. "
    ]
   },
