--- a/timing_results.ipynb
+++ b/timing_results.ipynb
@@ -110,6 +110,7 @@
     "- no parallelization / batching\n",
     "- data cleaning (null, missing data)\n",
     "- format transformation (string, int)\n",
+    "- h10 is too big for 64GB memory and requires either slicing or HPC to run\n", 
     "- possible different join predicates (center, within...) [full list here](https://shapely.readthedocs.io/en/latest/manual.html#binary-predicates)\n",
     "![alt text](timing_6.png \" \")"
    ]
